...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/general_margin_and_padding">
        <!--android:focusableInTouchMode="true"  to handle rotation, when RecyclerView is inside ScrollView-->

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/general_margin_and_padding"
            android:layout_marginStart="@dimen/bigger_margin_and_padding"
            android:layout_marginTop="@dimen/general_margin_and_padding"
            android:fontFamily="sans-serif-condensed"
...
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

        <!--CardView for ingredients-->
        <android.support.v7.widget.CardView
            android:id="@+id/ingredients_CardView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/general_margin_and_padding"
            android:layout_marginStart="@dimen/general_margin_and_padding"
            android:layout_marginTop="@dimen/margin_top_cardview_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
...
